--- a/css/style.css
+++ b/css/style.css
@@ -4,11 +4,37 @@
   --second-title-color: #ffffff;
   --accent-color: #2196f3;
   --second-accent-color: #f5f4fa;
+  --first-bg-color: #ffffff;
+  --sec-bg-color: #2f303a;
+  --th-bg-color: #2f303a;
+}
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
+ul,
+ol {
+  margin: 0;
+  padding-left: 0;
+}
+address {
+  font-style: normal;
+}
+a {
+  color: currentColor;
 }
 
 body {
   font-family: Roboto, sans-serif;
   color: #212121;
+}
+img {
+  display: block;
 }
 .list {
   list-style: none;
@@ -16,9 +42,46 @@ body {
 .link {
   text-decoration: none;
 }
+.container {
+  width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+.section {
+  padding: 94px 0;
+}
 
 /*--------------------HEADER---------------------------*/
+.header {
+  background-color: var(--first-bg-color);
+  border-bottom: 1px solid #ececec;
+}
+.header-content {
+  display: flex;
+  align-items: center;
+}
+.header-list {
+  display: flex;
+  align-items: center;
+}
+.header-item:not(:last-child) {
+  margin-right: 50px;
+}
+.header-contacts {
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+  gap: 50px;
+}
+.header-nav {
+  display: flex;
+  align-items: center;
+}
 .header-logo {
+  margin-right: 93px;
+  align-items: center;
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
   font-size: 26px;
@@ -30,6 +93,9 @@ body {
   color: #000000;
 }
 .header-link {
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -59,18 +125,26 @@ body {
 }
 /*--------------------HERO---------------------------*/
 .hero {
-  background-color: #2f303a;
+  background-color: var(--sec-bg-color);
+  text-align: center;
+  padding: 200px 0;
 }
 .hero-title {
+  margin: 0 auto 30px;
+  max-width: 696px;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.5;
-  text-align: center;
   text-transform: uppercase;
   letter-spacing: 0.06em;
   color: var(--second-title-color);
 }
 .hero-btn {
+  padding: 10px 32px;
+  border-radius: 4px;
+  min-width: 216px;
+  height: 50px;
+  border: transparent;
   font-family: inherit;
   font-weight: 700;
   font-size: 16px;
@@ -85,22 +159,38 @@ body {
   background-color: #188ce8;
 }
 /*-------------------Особенности---------------------------*/
+.specificity-list {
+  display: flex;
+  gap: 30px;
+}
 .specificity-post-title {
+  margin-bottom: 10px;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--title-color);
+  min-width: 270px;
 }
 .specificity-text {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--text-color);
+  min-width: 270px;
 }
 /*-------------------ЧЕМ ЗАНИМАЕМСЯ---------------------------*/
+.activity {
+  background-color: var(--first-bg-color);
+  text-align: center;
+}
+.activity-list {
+  display: flex;
+  gap: 30px;
+}
 .activity-title {
+  margin-bottom: 50px;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
@@ -111,8 +201,14 @@ body {
 /*-------------------КОМАНДА---------------------------*/
 .team {
   background-color: #f5f4fa;
+  text-align: center;
+}
+.team-list {
+  display: flex;
+  gap: 30px;
 }
 .team-title {
+  margin-bottom: 50px;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
@@ -120,7 +216,19 @@ body {
   letter-spacing: 0.03em;
   color: var(--title-color);
 }
+.team-item {
+  width: 270px;
+  text-align: center;
+  background: var(--second-title-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+.workers-position {
+  padding: 30px 10px;
+}
 .workers {
+  margin-bottom: 10px;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.18;
@@ -138,8 +246,11 @@ body {
 /*-------------------FOOTER---------------------------*/
 .footer {
   background-color: #2f303a;
+  padding: 60px 0;
 }
 .footer-logo {
+  display: inline-block;
+  margin-bottom: 20px;
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
   font-size: 26px;
@@ -158,8 +269,13 @@ body {
   letter-spacing: 0.03em;
   color: var(--second-title-color);
 }
+.footer-item {
+  margin-top: 9px;
+  margin-bottom: 9px;
+}
 .footer-mail,
 .footer-tel {
+  display: inline-block;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -174,7 +290,18 @@ body {
   color: var(--accent-color);
 }
 /*----------------HEROпортфолио------------------------------*/
+.projects {
+  align-items: center;
+}
+.projects-list {
+  display: flex;
+  gap: 8px;
+  justify-content: center;
+  margin-bottom: 34px;
+}
 .projects-btn {
+  padding: 6px 22px;
+  font-family: inherit;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
@@ -183,6 +310,23 @@ body {
   background-color: var(--second-accent-color);
   color: var(--title-color);
   border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+.portfolio-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+}
+.portfolio-post {
+  padding: 20px 24px;
+  border-right: 1px solid #eeeeee;
+  border-bottom: 1px solid #eeeeee;
+  border-left: 1px solid #eeeeee;
+}
+.portfolio-item {
+  display: block;
+  width: 370px;
 }
 .projects-btn:hover,
 .projects-btn:focus {
