--- a/css/style.css
+++ b/css/style.css
@@ -182,6 +182,7 @@ img {
 }
 /*-------------------ЧЕМ ЗАНИМАЕМСЯ---------------------------*/
 .activity {
+  padding-top: 0;
   background-color: var(--first-bg-color);
   text-align: center;
 }
@@ -269,12 +270,14 @@ img {
   letter-spacing: 0.03em;
   color: var(--second-title-color);
 }
-.footer-item {
+.footer-list {
   margin-top: 9px;
-  margin-bottom: 9px;
 }
-.footer-mail,
 .footer-tel {
+  margin-top: 9px;
+}
+.mail,
+.tel {
   display: inline-block;
   font-style: normal;
   font-weight: 400;
@@ -283,10 +286,10 @@ img {
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 }
-.footer-mail:hover,
-.footer-mail:focus,
-.footer-tel:hover,
-.footer-tel:focus {
+.mail:hover,
+.mail:focus,
+.tel:hover,
+.tel:focus {
   color: var(--accent-color);
 }
 /*----------------HEROпортфолио------------------------------*/
@@ -297,7 +300,7 @@ img {
   display: flex;
   gap: 8px;
   justify-content: center;
-  margin-bottom: 34px;
+  margin-bottom: 50px;
 }
 .projects-btn {
   padding: 6px 22px;
@@ -325,7 +328,6 @@ img {
   border-left: 1px solid #eeeeee;
 }
 .portfolio-item {
-  display: block;
   width: 370px;
 }
 .projects-btn:hover,
@@ -334,6 +336,7 @@ img {
   color: var(--second-title-color);
 }
 .portfolio-name {
+  margin-bottom: 4px;
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
